--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
   <link rel="stylesheet" href="./css/reset.css">
@@ -29,11 +29,12 @@
       <div class="burger" id="burger_button">
       </div>
       <div class="links" id="link_block">
-        <a href="#about" class="link">About</a>
-        <a href="#how_to_buy" class="link">How to buy</a>
-        <a href="#tokenomic" class="link">Tokenomics</a>
-        <a href="#" class="link" id="button_link">Buy now</a>
-      </div>
+        <div class="links_wrapper">
+          <a href="#about" class="link">About</a>
+          <a href="#how_to_buy" class="link">How to buy</a>
+          <a href="#tokenomic" class="link">Tokenomics</a>
+          <a href="#" class="link" id="button_link">Buy now</a>        </div>
+        </div>
     </div>
   </header>
   <section class="main" id="main">
@@ -54,8 +55,8 @@
         </div>
       </div>
     </div>
-    <img src="./images/line.svg" alt="line" class="bottom_line">
   </section>
+  <img src="./images/line.svg" alt="line" class="bottom_line">
   <section class="about" id="about">
     <div class="container" id="container_about">
       <div class="about_block_image">
@@ -69,8 +70,8 @@
         </div>
       </div>
     </div>
-    <img src="./images/line.svg" alt="line" class="bottom_line">
   </section>
+  <img src="./images/line.svg" alt="line" class="bottom_line">  
   <section class="how_to_buy" id="how_to_buy">
     <div class="container" id="container_buy">
       <h2 class="title" id="how_to_buy_title">How to buy</h2>
@@ -113,8 +114,8 @@
         </div>
       </div>
     </div>
-    <img src="./images/line.svg" alt="line" class="bottom_line">
   </section>
+  <img src="./images/line.svg" alt="line" class="bottom_line">
   <section class="tokenomic" id="tokenomic">
     <div class="container" id="container_tokenomic">
       <h2 class="title" id="tokenomic_title">Tokenomic</h2>
@@ -130,8 +131,8 @@
         </div>
       </div>
     </div>
-    <img src="./images/line.svg" alt="line" class="bottom_line">
   </section>
+  <img src="./images/line.svg" alt="line" class="bottom_line">
   <footer>
     <div class="container" id="container_footer">
       <h2 class="title" id="footer_title">Join Us!</h2>
