--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
           <h2 class="title" id="main_title">$PXMAS</h2>
           <p class="main_text">The most memeable memecoin |in existence.The dogs have had their day, it’s time for Pepe to take reign.</p>
           <div class="icons">
-            <img src="./images/first_main.png" alt="icon" class="paragraph_icon">
-            <img src="./images/second_main.png" alt="icon" class="paragraph_icon">
-            <img src="./images/third_main.png" alt="icon" class="paragraph_icon">
-            <img src="./images/fourth_main.png" alt="icon" class="paragraph_icon">
+            <img src="./images/new_icons/twitter.webp" alt="icon" class="paragraph_icon">
+            <img src="./images/new_icons/dextools.webp" alt="icon" class="paragraph_icon">
+            <img src="./images/new_icons/etherscan.webp" alt="icon" class="paragraph_icon">
+            <img src="./images/new_icons/uniswap.webp" alt="icon" class="paragraph_icon">
           </div>
         </div>
         <div class="main_image_container">
@@ -137,7 +137,7 @@
     <div class="container" id="container_footer">
       <h2 class="title" id="footer_title">Join Us!</h2>
       <div class="footer_icon">
-        <img src="./images/first_main.png" alt="icon" width="80" height="80">
+        <img src="./images/new_icons/twitter.webp" alt="icon" width="80" height="80">
       </div>
       <p class="footer_description">$PXMAS coin has no association with Matt Furie or his creation Pepe the Frog.<br>This token is simply paying homage to a meme we all love and recognize.</p>
       <p class="footer_description" >$PXMAS is a meme coin with no intrinsic value or expectation of financial<br>return. There is no formal team or roadmap. the coin is completely useless<br>and for entertainment purposes only.</p>
