--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
   <header class="header">
     <div class="container" id="head">
       <div class="logo">
-        <img src="./images/pepe_header.png" alt="logo image" class="logo_image">
+        <img src="./images/pepe_header.svg" alt="logo image" class="logo_image">
         <h3 class="name">Pepe Xmas</h3>
       </div>
       <div class="burger" id="burger_button">
       </div>
       <div class="links" id="link_block">
         <div class="links_wrapper">
-          <a href="#about" class="link">About</a>
-          <a href="#how_to_buy" class="link">How to buy</a>
-          <a href="#tokenomic" class="link">Tokenomics</a>
+          <a href="#about" class="link">about</a>
+          <a href="#how_to_buy" class="link">how to buy</a>
+          <a href="#tokenomic" class="link">tokenomics</a>
           <a href="#" class="link" id="button_link">Buy now</a>        </div>
         </div>
     </div>
@@ -42,11 +42,11 @@
       <div class="main_info">
         <div class="paragraph">
           <h2 class="title" id="main_title">$PXMAS</h2>
-          <p class="main_text">The most memeable memecoin |in existence.The dogs have had their day, it’s time for Pepe to take reign.</p>
+          <p class="main_text">The most memeable memecoin is staging a comeback. Even the dogs are getting gifts on this Christmas. It's time for Pepe to lead the New Year's Bull Run.</p>
           <div class="icons">
-            <img src="./images/new_icons/twitter.webp" alt="icon" class="paragraph_icon">
-            <img src="./images/new_icons/dextools.webp" alt="icon" class="paragraph_icon">
-            <img src="./images/new_icons/etherscan.webp" alt="icon" class="paragraph_icon">
+            <img src="./images/new_icons/X.svg" alt="icon" class="paragraph_icon">
+            <img src="./images/new_icons/dextools.svg" alt="icon" class="paragraph_icon">
+            <img src="./images/new_icons/etherscan.svg" alt="icon" class="paragraph_icon">
             <img src="./images/new_icons/uniswap.webp" alt="icon" class="paragraph_icon">
           </div>
         </div>
@@ -65,8 +65,8 @@
       <div class="about_text">
         <h2 class="title" id="about_title">About</h2>
         <div class="about_paragraph_block">
-          <p class="about_paragraph">Pepe to take reign. Pepe is tired of watching everyone play hot potato with the endless derivative TurboAssFlokiMoon Inu coins. The Inu’s have had their day. It’s time for the most recognizable meme in the world to take his reign as king of the memes.</p>
-          <p class="about_paragraph">Pepe is here to make memecoins great again. Launched stealth with no presale, zero taxes, LP burnt and contract renounced, $PXMAS is a coin for the people, forever. Fueled by pure memetic power, let $PEPE show you the way.</p>
+          <p class="about_paragraph">It's time for the most recognizable meme in the world to get into the holiday spirit with Santa. Pepe has brought along green candles and gingerbread for his holders. Even the bears and dogs will get gifts!</p>
+          <p class="about_paragraph">Pepe is back to make Christmas great again! Launched surreptitiously with no presale, zero taxes, LP burnt and contract renounced, $PXMAS the most New Year's coin of the year. Along with the bulls, Pepe will get you in the New Year's spirit!</p>
         </div>
       </div>
     </div>
@@ -118,7 +118,7 @@
   <img src="./images/line.svg" alt="line" class="bottom_line">
   <section class="tokenomic" id="tokenomic">
     <div class="container" id="container_tokenomic">
-      <h2 class="title" id="tokenomic_title">Tokenomic</h2>
+      <h2 class="title" id="tokenomic_title">Tokenomics</h2>
       <div class="tokenomic_content">
         <div class="tokenomic_paragraph">
           <h4 class="paragraph_title">Token Supply:</h4>
@@ -137,7 +137,7 @@
     <div class="container" id="container_footer">
       <h2 class="title" id="footer_title">Join Us!</h2>
       <div class="footer_icon">
-        <img src="./images/new_icons/twitter.webp" alt="icon" width="80" height="80">
+        <img src="./images/new_icons/X.svg" alt="icon" width="80" height="80">
       </div>
       <p class="footer_description">$PXMAS coin has no association with Matt Furie or his creation Pepe the Frog.<br>This token is simply paying homage to a meme we all love and recognize.</p>
       <p class="footer_description" >$PXMAS is a meme coin with no intrinsic value or expectation of financial<br>return. There is no formal team or roadmap. the coin is completely useless<br>and for entertainment purposes only.</p>
