--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>PEPE</title>
+  <link rel="icon" href="favicon.ico"><!-- 32×32 -->
+  <link rel="icon" href="images/favicon/favicon.png" type="image/png">
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/responsive.css">
@@ -41,7 +43,7 @@
     <div class="container" id="container_main">
       <div class="main_info">
         <div class="paragraph">
-          <h2 class="title" id="main_title">$PXMAS</h2>
+          <h2 class="title" id="main_title">$Pxmas</h2>
           <p class="main_text">The most memeable memecoin is staging a comeback. Even the dogs are getting gifts on this Christmas. It's time for Pepe to lead the New Year's Bull Run.</p>
           <div class="icons">
             <img src="./images/new_icons/X.svg" alt="icon" class="paragraph_icon">
