--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>PEPE</title>
+  <title>PEPE XMAS</title>
   <link rel="icon" href="favicon.ico"><!-- 32×32 -->
   <link rel="icon" href="images/favicon/favicon.png" type="image/png">
+  <link rel="apple-touch-icon" href="images/favicon/favicon.png">
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/responsive.css">
@@ -49,7 +50,7 @@
             <img src="./images/new_icons/X.svg" alt="icon" class="paragraph_icon">
             <img src="./images/new_icons/dextools.svg" alt="icon" class="paragraph_icon">
             <img src="./images/new_icons/etherscan.svg" alt="icon" class="paragraph_icon">
-            <img src="./images/new_icons/uniswap.webp" alt="icon" class="paragraph_icon">
+            <img src="./images/new_icons/uniswap.svg" alt="icon" class="paragraph_icon">
           </div>
         </div>
         <div class="main_image_container">
